[tool.poetry]
name = "jhive-docs"
version = "0.1.0"
description = "Documentation for J-HIVE"
authors = ["J-Hive Collaboration <jhive@wellesley.edu>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "^7.2.6"
sphinx_design = "^0.5.0"
black = "^24.2.0"
sphinxcontrib-napoleon = "^0.7"
pydata-sphinx-theme = "^0.15.2"
sphinx-autodoc-typehints = "^2.0.0"
myst-nb = "^1.0.0"
jhive_previz = { git = "https://github.com/j-hive/jhive-previz.git", develop = true}
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
morphfits = { git = "https://github.com/j-hive/morphfits.git", develop = true }
sphinx-autoapi = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
